# ESP32_W5500_TEST

./: .gitmodules  CMakeLists.txt
main/: CMakeLists.txt  wizchip_TEST.c
port/ioLibrary_Driver/inc/: wizchip_spi.h
port/ioLibrary_Driver/src/: wizchip_spi.c
